--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -5,41 +5,24 @@ layout: default
 
     {% include components/navigation.html %}
 
-    <div class="container-fluid gig_container">
-      <div class="row">
 
-        <div class="col-lg-5 m-auto">
-          <h1 class="gigs_title">
-              {{page.title}}
+    <div class="container container-gigs">
+
+      <div class="row justify-content-md-center">
+        <div class="col-lg-5">
+            <h1 class="gigs_title hr_big">
+                {{page.title}}
+                <hr />
             </h1>
-<hr />
-             
-                </div>
-
-</div>
-            <div class="row">
-
-                <!-- <div class="swimming col-lg-12">
-                    <h2 class="title-hr"><hr />Up Next<hr /></h2>
-                    <i class="fas fa-long-arrow-alt-right"></i>
-                    <h2 class="title-hr"><hr />In progress<hr /></h2>
-                    <i class="fas fa-long-arrow-alt-right"></i>
-                    <h2 class="title-hr"><hr />Closed<hr /></h2>
-                  </div> -->
-
-
-            </div>
-
-      <div class="row center-forcer">
-
-      
-        
-         
-        
-       
-          {{content}}
-      
         </div>
+      </div>
+
+
+        <div class="row justify-content-md-center">
+          {{content}}
+        </div>
+
+
     </div>
 
     {% include scripts/bootstrap.core.html %}
