close #111 get the htmlproofer to run again

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,27 +1,24 @@
 <!-- Navigation -->
 <div class="pos-f-t">
-    
-    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" src="../../img/prolike-logo.png"></a>
-      
-      
+
+    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" src="/img/prolike-logo.png"></a>
+
+
       <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
         <span class="popuptext" id="myPopup">
 <ul>
-         <li> <a href="/#home">Home</a></li>
-         <li><a href="/#why">Why</a></li>
-         <li> <a href="/#how">How</a></li>
-         <li> <a href="/#what">What</a></li>
-         <li> <a href="/gigs/">Gigs</a></li>
-         <li> <a href="/#contact">Contact</a></li>
+         <li> <a href="/#home" data-proofer-ignore>Home</a></li>
+         <li><a href="/#why" data-proofer-ignore>Why</a></li>
+         <li> <a href="/#how" data-proofer-ignore>How</a></li>
+         <li> <a href="/#what" data-proofer-ignore>What</a></li>
+         <li> <a href="/gigs/" data-proofer-ignore>Gigs</a></li>
+         <li> <a href="/#contact" data-proofer-ignore>Contact</a></li>
           </ul>
         </span>
       </div>
- 
-      
-    </nav>
-   
-    
-  </div>
 
-       
-      
+
+    </nav>
+
+
+  </div>
