--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -25,7 +25,7 @@
       <div class="col-lg-8">
         <h2 class="section-heading">{{title}}</h2>
         <p class="text-faded mb-4">{{caption}}</p>
-        <a class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}">{{btn_txt || strip || strip_newlines}}</a>
+        <a class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}" data-proofer-ignore>{{btn_txt || strip || strip_newlines}}</a>
       </div>
     </div>
   </div>
