--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <div class="pos-f-t">
 
-    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" src="/img/prolike-logo.png"></a>
+    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" alt="Prolike" src="/img/prolike-logo.png"></a>
 
 
       <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
