--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -51,7 +51,7 @@ button:focus {
   }
   
   /* The actual popup (appears on top) */
-.popup .popuptext {
+.popuptext{
     visibility: hidden;
     position: absolute;
   }
@@ -61,9 +61,8 @@ button:focus {
     height:100vh;
     width: 100%;
     left: 0;
-    padding-right: 75px;
-    padding-top: 75px;
     top: 60px;
+    padding: 0 0 120px 0;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
@@ -71,16 +70,36 @@ button:focus {
     display: flexbox;
     align-items: center;
     justify-items: center;
-  }
+    margin:0;
 
-  .popuptext ul {
+    ul {
       text-decoration: none;
       list-style-type: none;
-  }
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
 
-  .popuptext ul li a {
+    ul li {
+      display: inline-block;
+    }
+
+      ul li a {
       color: white;
   }
+      ul li a:hover {
+        text-decoration: none;
+        color: #ffc400;
+      }
+  }
+
+  
 
   /* Toggle this class when clicking on the popup container (hide and show the popup) */
   .popup .show {
