close #114 bring dead links to live

--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -23,39 +23,39 @@
         <div class="row">
           <div class="col">
             <h1>Navigation</h1>
-            <a href="#">Prolike</a>
-            <a href="#">Why</a>
-            <a href="#">How</a>
-            <a href="#">What</a>
-            <a href="#">Gigs</a>
-            <a href="#">Contact</a>
+            <a href="/#home" data-proofer-ignore>Prolike</a>
+            <a href="/#why" data-proofer-ignore>Why</a>
+            <a href="/#how" data-proofer-ignore>How</a>
+            <a href="/#what" data-proofer-ignore>What</a>
+            <a href="/gigs/" data-proofer-ignore>Gigs</a>
+            <a href="/#contact" data-proofer-ignore>Contact</a>
           </div>
           <div class="col">
             <h1>Our Credo</h1>
-            <a href="#">Lean Software Development</a>
-            <a href="#">Serverless</a>
-            <a href="#">Autonomation</a>
-            <a href="#">Docker</a>
-            <a href="#">Kaizen</a>
-            <a href="#">Talent Development</a>
+            Lean Software Development<br>
+            Serverless<br>
+            Autonomation<br>
+            Docker<br>
+            Kaizen<br>
+            Talent Development
           </div>
           <div class="col">
             <h1>Services</h1>
-            <a href="#">Garage Projects</a>
-            <a href="#">Open Source Contributions</a>
-            <a href="#">Team Resources</a>
-            <a href="#">Research</a>
-            <a href="#">JAM stack Development</a>
-            <a href="#">Integrations</a>
+            Garage Projects<br>
+            Open Source Contributions<br>
+            Team Resources<br>
+            Research<br>
+            JAM stack Development<br>
+            Integrations
           </div>
           <div class="col">
             <h1>Contact</h1>
-            <a href="#">hey@prolike.io</a>
-            <a href="#">VAT No.: 39464101</a>
-            <a href="#">intern@prolike.io</a>
-            <a href="#">+45 20 872 530</a>
-            <a href="#">Allerød Stationsvej 4</a>
-            <a href="#">3450 Allerød</a>
+            <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
+            VAT No.: 39464101<br/>
+            intern@prolike.io<br/>
+            +45 20 872 530<br/>
+            Allerød Stationsvej 4<br/>
+            3450 Allerød
           </div>
         </div>
       </div>
