--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -18,4 +18,9 @@
         color: $prolikeyellow;
         text-decoration: none;
     }
+
+    .col {
+        color: #ffffff;
+        font-size: 20px !important;   
+    }
 }
