--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:url" content="{{ page.url }}">
-  <meta property="og:image" content="{{ if page.image }}{{ page.image }}{{ else }}prolike-logo.png {{ endif }}" />
+  <meta property="og:image" content="{{ if page.image }}{{ page.image }}{{ else }}{{ site.logo }}{{ endif }}" />
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="article:publisher" content="https://www.linkedin.com/company/prolike/" />
   <meta property="article:author" content="https://www.linkedin.com/company/prolike/" />
