--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -21,7 +21,7 @@
     <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
       <div class="container-fluid">
         <div class="row">
-          <div class="col">
+          <div class="col-lg col-xs-6">
             <h1>Navigation</h1>
             <a href="/#home" data-proofer-ignore>Prolike</a>
             <a href="/#why" data-proofer-ignore>Why</a>
@@ -30,7 +30,7 @@
             <a href="/gigs/" data-proofer-ignore>Gigs</a>
             <a href="/#contact" data-proofer-ignore>Contact</a>
           </div>
-          <div class="col">
+          <div class="col-lg col-xs-6">
             <h1>Our Credo</h1>
             Lean Software Development<br>
             Serverless<br>
@@ -39,7 +39,7 @@
             Kaizen<br>
             Talent Development
           </div>
-          <div class="col">
+          <div class="col-lg col-xs-6">
             <h1>Services</h1>
             Garage Projects<br>
             Open Source Contributions<br>
@@ -48,7 +48,7 @@
             JAM stack Development<br>
             Integrations
           </div>
-          <div class="col">
+          <div class="col-lg col-xs-6">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
             VAT No.: 39464101<br/>
