--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -19,8 +19,8 @@
         text-decoration: none;
     }
 
-    .col {
+    .col-lg {
         color: #ffffff;
-        font-size: 20px !important;   
+        font-size: 20px;
     }
 }
