--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -6,8 +6,16 @@
   {%if include.btn_href%}{{include.btn_href}}{%else%}/{%endif%}
 {% endcapture %}
 
+{% capture btn_href-call %}
+  {%if include.btn_href-call%}{{include.btn_href-call}}{%else%}/{%endif%}
+{% endcapture %}
+
 {% capture btn_txt %}
   {%if include.btn_txt%}{{include.btn_txt}}{%else%}btn_txt=your-text-here{%endif%}
+{% endcapture %}
+
+{% capture btn_txt-call %}
+  {%if include.btn_txt-call%}{{include.btn_txt-call}}{%else%}btn_txt=your-text-here{%endif%}
 {% endcapture %}
 
 {% capture title %}
@@ -26,6 +34,7 @@
         <h2 class="section-heading">{{title}}</h2>
         <p class="text-faded mb-4">{{caption}}</p>
         <a class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}" data-proofer-ignore>{{btn_txt || strip || strip_newlines}}</a>
+        <a class="btn call btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href-call || strip || strip_newlines}}" data-proofer-ignore>{{btn_txt-call || strip || strip_newlines}}</a>
       </div>
     </div>
   </div>
