--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -30,10 +30,84 @@
     }
 }
 
+/* Page buttons */
+
 .btn {
     background: $prolikeyellow;
     color: $prolikeblue;
     font-weight: 700;
     border-radius: 0em;
     margin-top: .5em;
+    border:none;
+    position: relative;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 800ms ease all;
+    outline: none;
 }
+
+.btn:hover{
+    background:#fff;
+  }
+ 
+  .btn:before,.btn:after {
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:4px;
+    width:0;
+    background: $prolikeyellow;
+    transition:400ms ease all;
+  }
+  
+  .btn:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+
+  .btn:hover:before,.btn:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
+
+/* Call knap */
+
+.call {
+    background: $prolikeblue;
+    color: #ffffff;
+    font-weight: 700;
+    border-radius: 0em;
+    margin-top: .5em;
+    text-transform: uppercase;
+    margin-left: 10px;
+}
+
+.call:hover{
+    background:#fff;
+  }
+ 
+  .call:before, .call:after {
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:4px;
+    width:0;
+    background: $prolikeblue;
+    transition:400ms ease all;
+  }
+  
+  .call:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+
+  .call:hover:before, .call:hover:after{
+    width:100%;
+    transition:800ms ease all;
+  }
