--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -84,4 +84,29 @@
         margin-left: 0;
     }
 
+    // Mobile section backgrounds
+
+    .section {
+        background-image: url(../img/mb-1.jpg);
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+
+    .section:nth-child(2) {
+        background-image: url(../img/mb-2.jpg);
+    }
+
+    .section:nth-child(3) {
+        background-image: url(../img/mb-3.jpg);
+    }
+
+    .section:nth-child(4) {
+        background-image: url(../img/mb-4.jpg);
+    }
+
+    .section:nth-child(5) {
+        background-image: none;
+    }
+
 }
