--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -102,8 +102,8 @@ button:focus {
   /* Toggle this class when clicking on the popup container (hide and show the popup) */
   .popup .show {
     visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
+    -webkit-animation: fadeIn .3s;
+    animation: fadeIn .3s;
   }
   
   /* Add animation (fade in the popup) */
