close #146 create navigation link to stories

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -12,6 +12,7 @@
          <li> <a href="/#how" data-proofer-ignore>How</a></li>
          <li> <a href="/#what" data-proofer-ignore>What</a></li>
          <li> <a href="/gigs/" data-proofer-ignore>Gigs</a></li>
+         <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
          <li> <a href="/#contact" data-proofer-ignore>Contact</a></li>
           </ul>
         </span>
