--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -6,7 +6,7 @@
 
 .section {
     height: 100vh;
-    background-image: url(../img/testwallpaper.jpg);
+    background-image: url(../img/hand.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
