--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -1,4 +1,6 @@
-
+.kicker {
+    font-weight: bolder !important;
+}
 
 .stories_container {
     margin-top: 60px;
@@ -19,6 +21,8 @@
     .row {
         margin-top: 60px;
     }
+
+    
 
     .story-header {
         background-image: url("../img/brain_background.jpg");
@@ -74,6 +78,57 @@
             background-position: center center;
             background-repeat: no-repeat;
         }
+    }
+}
+
+// individual story site
+
+.image-header-bg {
+    margin-top: 135px;
+    height: 450px;
+    background-size: 120%;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+   
+}
+
+.story-content {
+    padding: 0;
+    margin-top: 75px;
+    margin-bottom: 75px;
+
+    .hr_big hr {
+        min-width: 100% !important;
+        border-color: $prolikeyellow;
+     }
+
+    h2 {
+        padding-bottom: 0;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 600;
+        padding: 20px 0 10px 0;
+    }
+
+    h3 {
+        padding: 10px 0;
+        font-weight: bold;
+        font-size: 20px !important;
+    }
+
+    a {
+        color:  #4B504C;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+
+    a:hover {
+        color: $prolikeyellow;
+    }
+
+    h1 {
+        text-transform: uppercase;
     }
 }
 
