close #152 add and remove links in footer

--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -28,6 +28,7 @@
             <a href="/#how" data-proofer-ignore>How</a>
             <a href="/#what" data-proofer-ignore>What</a>
             <a href="/gigs/" data-proofer-ignore>Gigs</a>
+            <a href="/stories/">Stories</a>
             <a href="/#contact" data-proofer-ignore>Contact</a>
           </div>
           <div class="col-lg col-xs-6">
