--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -46,16 +46,16 @@
             Open Source Contributions<br>
             Team Resources<br>
             Research<br>
-            JAM stack Development<br>
+            JAM Stack Development<br>
             Integrations
           </div>
           <div class="col-lg col-xs-6">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            VAT No.: 39464101<br/>
-            intern@prolike.io<br/>
-            +45 20 872 530<br/>
-            Allerød Stationsvej 4<br/>
+            VAT No.: 39464101<br />
+            intern@prolike.io<br />
+            +45 20 872 530<br />
+            Allerød Stationsvej 4<br />
             3450 Allerød
           </div>
         </div>
