--- a/_sass/_headers.scss
+++ b/_sass/_headers.scss
@@ -4,10 +4,10 @@ h1 {
   font-size: 2.5rem;
   font-weight: 900;
   text-transform: uppercase;
-  @media (min-width: 992px) {
-  }
-  @media (min-width: 1200px) {
-  }
+
+  @media (min-width: 992px) {}
+
+  @media (min-width: 1200px) {}
 }
 
 .bg-primary h2 {
@@ -16,16 +16,16 @@ h1 {
 
 h2 {
   font-size: 1.8rem;
-  @media (min-width: 992px) {
-  }
-  @media (min-width: 1200px) {
-  }
+
+  @media (min-width: 992px) {}
+
+  @media (min-width: 1200px) {}
 }
 
 h3 {
   font-size: 1.3rem;
-  @media (min-width: 992px) {
-  }
-  @media (min-width: 1200px) {
-  }
+
+  @media (min-width: 992px) {}
+
+  @media (min-width: 1200px) {}
 }
