--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -5,117 +5,122 @@
 // to give each section it's own unique image.
 
 .section {
-    height: 100vh;
-    background-image: url(../img/hand.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+  height: 100vh;
+  background-image: url(../img/hand.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
-.section:nth-child(2), .section:nth-child(4) {
+.section:nth-child(2),
+.section:nth-child(4) {
   background-image: url(../img/brain_background.jpg);
 }
 
 .bg-primary {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    background-color: inherit !important;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  background-color: inherit !important;
 }
 
 #fullpage {
 
-    h2 {
-        color: $prolikeblue !important;
-        font-size: 2.5em;
-        margin-bottom: .5em;
-    }
-    
-    p {
-        color: inherit;
-        font-size: 1.5em;
-        max-width: 70%;
-    }
+  h2 {
+    color: $prolikeblue !important;
+    font-size: 2.5em;
+    margin-bottom: .5em;
+  }
+
+  p {
+    color: inherit;
+    font-size: 1.5em;
+    max-width: 70%;
+  }
 }
 
 /* Page buttons */
 
 .btn {
-    background: $prolikeyellow;
-    color: $prolikeblue;
-    font-weight: 700;
-    border-radius: 0em;
-    margin-top: .5em;
-    border:none;
-    position: relative;
-    font-size: 20px;
-    cursor: pointer;
-    transition: 800ms ease all;
-    outline: none;
+  background: $prolikeyellow;
+  color: $prolikeblue;
+  font-weight: 700;
+  border-radius: 0em;
+  margin-top: .5em;
+  border: none;
+  position: relative;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 800ms ease all;
+  outline: none;
 }
 
-.btn:hover{
-    background:#fff;
-  }
- 
-  .btn:before,.btn:after {
-    content:'';
-    position:absolute;
-    top:0;
-    right:0;
-    height:4px;
-    width:0;
-    background: $prolikeyellow;
-    transition:400ms ease all;
-  }
-  
-  .btn:after{
-    right:inherit;
-    top:inherit;
-    left:0;
-    bottom:0;
-  }
+.btn:hover {
+  background: #fff;
+}
 
-  .btn:hover:before,.btn:hover:after{
-    width:100%;
-    transition:800ms ease all;
-  }
+.btn:before,
+.btn:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 4px;
+  width: 0;
+  background: $prolikeyellow;
+  transition: 400ms ease all;
+}
+
+.btn:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
+}
+
+.btn:hover:before,
+.btn:hover:after {
+  width: 100%;
+  transition: 800ms ease all;
+}
 
 /* Call knap */
 
 .call {
-    background: $prolikeblue;
-    color: #ffffff;
-    font-weight: 700;
-    border-radius: 0em;
-    margin-top: .5em;
-    text-transform: uppercase;
-    margin-left: 10px;
+  background: $prolikeblue;
+  color: #ffffff;
+  font-weight: 700;
+  border-radius: 0em;
+  margin-top: .5em;
+  text-transform: uppercase;
+  margin-left: 10px;
 }
 
-.call:hover{
-    background:#fff;
-  }
- 
-  .call:before, .call:after {
-    content:'';
-    position:absolute;
-    top:0;
-    right:0;
-    height:4px;
-    width:0;
-    background: $prolikeblue;
-    transition:400ms ease all;
-  }
-  
-  .call:after{
-    right:inherit;
-    top:inherit;
-    left:0;
-    bottom:0;
-  }
+.call:hover {
+  background: #fff;
+}
 
-  .call:hover:before, .call:hover:after{
-    width:100%;
-    transition:800ms ease all;
-  }
+.call:before,
+.call:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 4px;
+  width: 0;
+  background: $prolikeblue;
+  transition: 400ms ease all;
+}
+
+.call:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
+}
+
+.call:hover:before,
+.call:hover:after {
+  width: 100%;
+  transition: 800ms ease all;
+}
