close #135 implement footer on gigs and stories

--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: page
 ---
 
-{% include components/navigation.html %}
+
 
 <div class="container-fluid gig_container">
   <div class="row">
@@ -33,8 +33,4 @@ layout: default
   
 </div>
 
-{% include scripts/bootstrap.core.html %}
 
-{% include scripts/plugins.html %}
-
-{% include scripts/template.custom.html %}
