--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: page
 ---
 
 
-{% include components/navigation.html %}
 
 
 <div class="container container-gigs">
@@ -24,9 +23,3 @@ layout: default
 
 
 </div>
-
-{% include scripts/bootstrap.core.html %}
-
-{% include scripts/plugins.html %}
-
-{% include scripts/template.custom.html %}
