--- a/_layouts/stories_layout.html
+++ b/_layouts/stories_layout.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: page
 ---
 
-{% include components/navigation.html %}
+
 
 <div class="container-fluid stories_container">
 <div class="story-header">
@@ -17,4 +17,3 @@ layout: default
 </div>
 </div>
 
-{% include scripts/plugins.html %}
