--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: page
 ---
 
-{% include components/navigation.html %}
+
 
 <div class="image-header-bg container" style="background-image: url('../{{ page.image }}') !important;">
 
@@ -36,9 +36,3 @@ layout: default
 
 
 
-
-{% include scripts/bootstrap.core.html %}
-
-{% include scripts/plugins.html %}
-
-{% include scripts/template.custom.html %}
