close #156 styling custom footer

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -24,3 +24,12 @@
         font-size: 20px;
     }
 }
+
+.ourfooter {
+    display: flex;
+    justify-content: space-around;
+    
+    .bg-primary {
+        width: 100%;
+    }
+}
