--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -131,7 +131,14 @@
     h3 {
         padding: 10px 0;
         font-weight: bold;
-        font-size: 20px !important;
+        font-size: 17px !important;
+    }
+
+    h4 {
+        padding: 10px 0;
+        font-weight: bold;
+        font-size: 15px !important;
+        text-transform: uppercase;
     }
 
     a {
