close #161 adding usability to contact links in footer

--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -52,10 +52,10 @@
           <div class="col-lg col-xs-6">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            VAT No.: 39464101<br />
+            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT No.: 39464101</a>
             intern@prolike.io<br />
-            +45 20 872 530<br />
-            Allerød Stationsvej 4<br />
+            <a href="tel:+45 20 872 530">+45 20 872 530</a>
+            <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
             3450 Allerød
           </div>
         </div>
