--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -25,7 +25,7 @@
     }
 
     .row {
-        margin-top: 60px;
+        margin: 100px 0;
     }
 
     
@@ -41,7 +41,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom:  60px;
+        margin-bottom:  0px;
+        border-bottom: 1px solid #bdbdbd;
     }
 
     .tags {
@@ -83,7 +84,6 @@
         .card-body {
             border: 1px solid #bdbdbd;
             border-top: none;
-            border-radius: 3px;
             padding: 5px 15px 10px 15px;
         }
 
@@ -94,6 +94,8 @@
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
+            border: 1px solid #bdbdbd;
+            border-bottom: none;
         }
     }
 }
@@ -113,7 +115,7 @@
 .story-content {
     padding: 0;
     margin-top: 75px;
-    margin-bottom: 75px;
+    margin-bottom: 100px;
 
     .hr_big hr {
         min-width: 100% !important;
