--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -7,7 +7,7 @@ layout: page
 <div class="container-fluid gig_container">
   <div class="row">
 
-    <div class="col-lg-7 m-auto gig_content">
+    <div class="col m-auto gig_content">
       <h1 class="gigs_title hr_big">
           {{page.title}}<hr />
         </h1>
