close #167 work with feed xml and get it to spit out posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,6 +63,10 @@
   <link href="/css/main.css" rel="stylesheet">
   <!-- Fullpage.js scripts -->
   <link rel="stylesheet" href="/css/fullpage.css">
+
+  <!-- feed -->
+
+  <link rel="alternate" title="{{ site.title }}" type="application/json" href="{{ "/feed.json" prepend: site.url }}" />
   
   </head>
   
