--- a/_includes/functions/tags_array.liquid
+++ b/_includes/functions/tags_array.liquid
@@ -7,8 +7,8 @@
 
 {% comment %} compiling the gross list of all tags, duplicates and all {% endcomment %}
 
-{% for story in site.stories %}
-  {% assign tags = tags | concat:story.tags %}
+{% for post in site.posts %}
+  {% assign tags = tags | concat:post.tags %}
 {% endfor %}
 
 
