--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -31,7 +31,10 @@ layout: page
 
 {{ page.content | remove: page.excerpt }}
 
-
+{% assign sorted_tags = page.tags | sort %}
+{% for tag in sorted_tags %}
+  <span class="tag"><a href="/posts/#{{ tag }}">{{ tag }}</a></span>
+{% endfor %}
 </div>
 
 
