--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -88,7 +88,7 @@
         }
 
         .card-img-top {
-            width: 100%;
+            width: 100% !important;
             height: 150px;
             margin-top: 25px;
             background-size: cover;
@@ -99,6 +99,11 @@
         }
     }
 }
+
+.hidden {
+    display: none!important;
+    visibility: hidden!important;
+  }
 
 // individual story site
 
