--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -7,6 +7,11 @@
     text-align: center;
     padding: 0 0 30px 0;
 
+    a {
+        color: #1a2336;
+        text-decoration: none;
+    }
+
     h2 {
         font-size: 60px;
         text-transform: uppercase;
