close #180 changing stories header

--- a/_layouts/stories_layout.html
+++ b/_layouts/stories_layout.html
@@ -8,7 +8,7 @@ layout: page
 <div class="story-header">
     <div class="container align-middle">
         <h2>{{ page.title }}</h2>
-        <h3>A place for all Yipees and Elders to share their tales.</h3>
+        <h3>Thoughts and scribbles</h3>
     </div>
 </div>
 <div class="container">
