--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -13,9 +13,15 @@
     }
 
     h2 {
-        font-size: 60px;
+        font-size: 75px;
         text-transform: uppercase;
-        font-weight: bold;
+        font-weight: 900;
+    }
+
+    h3 {
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 1px;
     }
 
     .card-title {
@@ -36,18 +42,17 @@
     
 
     .story-header {
-        background-image: url("../img/brain_background.jpg");
+        background-image: url("../img/stories/yellow-header.jpg");
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
         width: 100%;
-        height: 400px;
+        height: 500px;
         text-align: left;
         display: flex;
         justify-content: center;
         align-items: center;
         margin-bottom:  0px;
-        border-bottom: 1px solid #bdbdbd;
     }
 
     .tags {
